# mu-codebase

./: README.md  docker-compose.yml
baseline/: Makefile  go.mod  main.go
coordinator/: index.js  out.txt  package.json
coordinator/config/: default.json  prod.json
function/: Dockerfile  Makefile  docker-compose.yml  function.go  go.mod  go.sum  main.go  tasks.go  test.sh
function/generic-function/.aws-sam/: build.toml
function/generic-function/hello-world/: go.mod
function/tasks/: tasks.go
function/types/: types.go
generic-function/: README.md  template.yaml
generic-function/hello-world/: go.sum  main.go
shim/: LICENSE  README.md  index.js  out.txt  package-lock.json  package.json  pyproject.toml
shim/config/: default.json  prod.json
shim/src/test_package_dpac99/: shim.py
test/: 10240_v3.json  2048_v2.json  2048_v3.json  4096_v2.json  4096_v3.json  8192.json  8192_v2.json  go.mod  go.sum  graph.py  out.txt  out2.txt  package-lock.json  package.json  requirements.txt  small.py  test  test.go  test.js  test.py  testScale.py  testThumb.py
test/matrixStats/: 2048.json  4096.json  6144.json
test/stats/: 10240.json  10240_2.json  10240_v4.json  2048.json  2048_v4.json  4096.json  4096_v4.json  6144_v3.json  6144_v4.json  8192_v3.json  8192_v4.json
test/stats2/: 10240.json  10240_v2.json  2048.json  2048_v2.json  4096.json  4096_v2.json  6144.json  6144_v2.json  8192.json  8192_v2.json
thumbnailer/: Makefile  go.mod  go.sum  main.go  test.py
