[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_package_dpac99"
version = "0.0.1"
authors = [
  { name="Diogo Pacheco", email="diogo.a.pacheco@tecnico.ulisboa.pt" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
